Update JreInstallService.java